Navigation set, customizing splash page

--- a/saltiest-hacker-news-trolls-1/src/App.css
+++ b/saltiest-hacker-news-trolls-1/src/App.css
@@ -45,6 +45,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .saltyPeopleBox{
@@ -72,4 +73,13 @@ box-sizing: border-box;
   display:flex;
   align-items: center;
   justify-content: center;
+}
+
+.textBox{
+  
+  margin-top: 5%;
+  width: 75%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
