--- a/saltiest-hacker-news-trolls-1/src/App.css
+++ b/saltiest-hacker-news-trolls-1/src/App.css
@@ -84,3 +84,52 @@ box-sizing: border-box;
   align-items: center;
 }
 
+.aboutTitle{
+  margin-top: 5% ;
+}
+
+.aboutTitle1{
+  margin-right: 30%;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.aboutTitle2{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.aboutTitle3{
+  margin-left: 30%;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.saltShaker{
+  width: 25%;
+  margin-top: -20%;
+  margin-left: 15%;
+}
+
+.saltPile{
+  background: #FFFFFF;
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 50%;
+  padding-bottom: 25%;
+  
+  }
+
+  .aboutText{
+    background: white;
+    margin-bottom: -20%;
+    width: 75%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
