--- a/saltiest-hacker-news-trolls-1/src/App.css
+++ b/saltiest-hacker-news-trolls-1/src/App.css
@@ -4,6 +4,7 @@
 .App-Wrap{
   display: flex;
   flex-direction: column;
+  min-width: 500px;
 }
 .Nav {
   text-align: center;
@@ -12,14 +13,21 @@
   flex-direction: row;
   width: 40%;
   justify-content: space-around;
-  
+  margin: 2% 0;
+  font-size: calc(5px + 2vmin);
 }
 .logo{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20%;
+  margin-top: 5%; 
 }
+
+.logo img {
+  width: 35%;
+  margin-bottom: 2%;
+}
+
 .App-logo {
   height: 40vmin;
 }
@@ -31,7 +39,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
@@ -40,12 +47,12 @@
 }
 
 
-
 .saltyPeopleSection{
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  margin-top: 2%;
 }
 
 .saltyPeopleBox{
@@ -56,7 +63,6 @@ flex-direction: column;
 align-items: center;
 padding-top: 2%;
 padding-bottom: 2%;
-
 }
 
 .saltyPeople{
@@ -67,20 +73,24 @@ border: 1px solid #FD8936;
 padding: 7%;
 width: 90%;
 box-sizing: border-box;
+font-size: calc(50px + 2vmin);
 }
 
 .title{
   display:flex;
   align-items: center;
   justify-content: center;
+  font-size: calc(60px + 2vmin);
+  font-family: 'Roboto';
 }
 
 .textBox{
   
-  margin-top: 5%;
+  margin: 5% 0  15% 0;
   width: 75%;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: calc(5px + 2vmin);
 }
 
