--- a/saltiest-hacker-news-trolls-1/src/App.css
+++ b/saltiest-hacker-news-trolls-1/src/App.css
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   flex-direction: row;
-  width: 40%;
+  width: 50%;
   justify-content: space-around;
   
 }
@@ -112,24 +112,40 @@ box-sizing: border-box;
   width: 25%;
   margin-top: -20%;
   margin-left: 15%;
+  background: none;
 }
 
-.saltPile{
+.saltText{
   background: #FFFFFF;
   width: 95%;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 50%;
-  padding-bottom: 25%;
+  padding-bottom: 10%;
+
   
   }
 
   .aboutText{
     background: white;
-    margin-bottom: -20%;
     width: 75%;
     display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .saltPileContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .saltPile{
+    margin-top: -40%;
+    background: white;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
